@@ -1,3 +1,9 @@
+2009-04-07  Darin Adler  <darin@apple.com>
+
+        Another build fix.
+
+        * WebCore.NPAPI.exp: Added new functions.
+
 2009-04-07  Anders Carlsson  <andersca@apple.com>
 
         Another build fix.
